# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  release.yml
src/python_template/: __init__.py  __main__.py
tests/: test_cli.py
